--- a/website/static_resources/default_template/css/small_css.css
+++ b/website/static_resources/default_template/css/small_css.css
@@ -50,12 +50,10 @@
 /* }}} */
 
 /* footer style {{{ */
-.footer { padding: 1.0em 0 4em; }
-.footer_list { text-align: center; }
-.footer_list .list_element_label, .footer_list .list_element_email { display: none; }
-.footer_list .list_element_top { display: block; }
-
-.email_list_element { border-bottom: 0.15em solid #079CC4; padding: 0 0 1.0em; }
-.copyright_list_element { padding: 0.8em 0 0.5em; }
-.footer_list .email_list_element .list_element_value a { font-weight: bold; }
+.footer_list { margin-top: 3em; text-align: center; }
+.footer_list li { margin-bottom: 1.8em; }
+.footer_list li .footer_element_name { font-size: 0.9em; font-weight: bold; }
+.footer_list li .footer_element_separator { margin: 0 auto 0.5em; width: 10em; }
+.footer_list li .footer_element_content a { font-size: 1.1em; text-decoration: underline; }
+.powered_by_container { border-top: 2px dashed; margin-bottom: 3em; margin-top: 5em; padding-left: 1em; padding-right: 1em; padding-top: 2em; text-align: center; }
 /* }}} */
